// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GlossaryFootnote component with props render Footnote  1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <GlossaryFootnotePopup
    glossaryFootnote="Footnote"
  >
    <div
      className="glossary-toolbar-wrapper"
    >
      <div
        className="glossary-header"
      >
        <div
          className="glossary-title"
        >
          <ElementButton
            labelText="P"
            type="close-container"
          >
            <span
              className="btn-element close-container"
            >
              <img
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </span>
          </ElementButton>
          <div
            className="glossary-label"
          >
            Footnote
          </div>
          <div
            className="clr"
          />
        </div>
      </div>
      <div
        id="toolbarGlossaryFootnote"
      />
      <div
        className="glossary-body"
      >
        <div
          id="glossary-toolbar"
        />
        <div
          className="glossary-definition-header"
        >
          <div
            className="glossary-definition-label"
          >
            Note:
          </div>
          <div
            className="glossary-editor glossary-definition-description"
            id="glossary-editor-attacher"
          >
            <ReactEditor
              className="definition-editor"
              id="footnote-0"
              placeholder="Type Something"
            >
              <div>
                <p
                  className="definition-editor"
                  contentEditable="true"
                  id="footnote-0"
                  onFocus={[Function]}
                  placeholder="Type Something"
                />
              </div>
            </ReactEditor>
          </div>
        </div>
        <div
          className="glossary-definition-buttons"
        >
          <span
            className="glossary-cancel-button"
          >
            Cancel
          </span>
          <span
            className="glossary-save-button"
          >
            Save
          </span>
        </div>
      </div>
    </div>
  </GlossaryFootnotePopup>
</Provider>
`;

exports[`Testing GlossaryFootnote component with props render Glossary  1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <GlossaryFootnotePopup
    glossaryFootnote="Glossary"
  >
    <div
      className="glossary-toolbar-wrapper"
    >
      <div
        className="glossary-header"
      >
        <div
          className="glossary-title"
        >
          <ElementButton
            labelText="P"
            type="close-container"
          >
            <span
              className="btn-element close-container"
            >
              <img
                src={
                  Object {
                    "process": [Function],
                  }
                }
              />
            </span>
          </ElementButton>
          <div
            className="glossary-label"
          >
            Glossary
          </div>
          <div
            className="clr"
          />
        </div>
      </div>
      <div
        id="toolbarGlossaryFootnote"
      />
      <div
        className="glossary-body"
      >
        <div
          id="glossary-toolbar"
        />
        <div
          className="glossary-word-header"
        >
          <div
            className="glossary-word-title"
          >
            Term:
          </div>
          <div
            className="glossary-word-name glossary-word-description"
            id="glossary-editor"
          >
            <ReactEditor
              className="definition-editor"
              id="glossary-0"
              placeholder="Type Something"
            >
              <div>
                <p
                  className="definition-editor"
                  contentEditable="true"
                  id="glossary-0"
                  onFocus={[Function]}
                  placeholder="Type Something"
                />
              </div>
            </ReactEditor>
          </div>
        </div>
        <div
          className="glossary-definition-header"
        >
          <div
            className="glossary-definition-label"
          >
            Definition:
          </div>
          <div
            className="glossary-editor glossary-definition-description"
            id="glossary-editor-attacher"
          >
            <ReactEditor
              className="definition-editor"
              id="glossary-1"
              placeholder="Type Something"
            >
              <div>
                <p
                  className="definition-editor"
                  contentEditable="true"
                  id="glossary-1"
                  onFocus={[Function]}
                  placeholder="Type Something"
                />
              </div>
            </ReactEditor>
          </div>
        </div>
        <div
          className="glossary-definition-buttons"
        >
          <span
            className="glossary-cancel-button"
          >
            Cancel
          </span>
          <span
            className="glossary-save-button"
          >
            Save
          </span>
        </div>
      </div>
    </div>
  </GlossaryFootnotePopup>
</Provider>
`;

exports[`Testing GlossaryFootnote component with props render Glossary Footnote component  1`] = `
<GlossaryFootnotePopup>
  <div
    className="glossary-toolbar-wrapper"
  >
    <div
      className="glossary-header"
    >
      <div
        className="glossary-title"
      >
        <ElementButton
          labelText="P"
          type="close-container"
        >
          <span
            className="btn-element close-container"
          >
            <img
              src={
                Object {
                  "process": [Function],
                }
              }
            />
          </span>
        </ElementButton>
        <div
          className="glossary-label"
        />
        <div
          className="clr"
        />
      </div>
    </div>
    <div
      id="toolbarGlossaryFootnote"
    />
    <div
      className="glossary-body"
    >
      <div
        id="glossary-toolbar"
      />
      <div
        className="glossary-definition-header"
      >
        <div
          className="glossary-definition-label"
        >
          Note:
        </div>
        <div
          className="glossary-editor glossary-definition-description"
          id="glossary-editor-attacher"
        >
          <ReactEditor
            className="definition-editor"
            id="footnote-0"
            placeholder="Type Something"
          >
            <div>
              <p
                className="definition-editor"
                contentEditable="true"
                id="footnote-0"
                onFocus={[Function]}
                placeholder="Type Something"
              />
            </div>
          </ReactEditor>
        </div>
      </div>
      <div
        className="glossary-definition-buttons"
      >
        <span
          className="glossary-cancel-button"
        >
          Cancel
        </span>
        <span
          className="glossary-save-button"
        >
          Save
        </span>
      </div>
    </div>
  </div>
</GlossaryFootnotePopup>
`;
